minor fixes for readability

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -10,7 +10,7 @@
 .headerContainer {
     width: 100%;
     max-width: 1200px;
-    margin:  20px 0px 100px 0px;
+    margin:  30px 0px 100px 0px;
 }
 
 .headerContainer.listMode {    
@@ -46,6 +46,10 @@
     background-color: #0D5C75;
     font-weight: 500;
     cursor: pointer;
+}
+
+.headerButton:hover{
+    opacity: .9;
 }
 
 .headerSearch{
